# pereval

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: limitations.md  quantile-task-plan.md  setup.md  task-design.md
docs/tasks/: ballistic.md  ccar.md  orbital.md  quantile.md
pereval/: __init__.py
pereval/scorers/: ballistic.py  interval.py  pinball.py
pereval/tasks/: smoke.py
pereval/tasks/ballistic/: Dockerfile  __init__.py  baselines.py  compose.yaml  generator.py  task.py
pereval/tasks/ccar/: __init__.py  baselines.py  generator.py  task.py
pereval/tasks/orbit/: __init__.py  baselines.py  generator.py  hyperbolic.py  task.py
pereval/tasks/quantile/: baselines.py  generator.py  task.py
pereval/tasks/quantile/data/: PROVENANCE.txt  manifest.csv
scripts/: enumerate_fred.py  fetch_screen.py  quantile_table.py  save_transcript.py  screen_fred.py
tests/: test_ballistic_baseline.py  test_ballistic_generator.py  test_ballistic_scorer.py  test_ccar.py  test_hyperbolic.py  test_orbit.py  test_pinball.py  test_quantile.py
