[project]
name = "pereval"
version = "0.0.1"
description = "Inspect-based evaluation suite for quantitative model development tasks"
authors = [{ name = "Dmitriy Mayorov" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3",
    "openai>=1.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "py-ballisticcalc>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pereval*"]
